Tue Sep  6 11:57:09 2005  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/DdsDcps.mpc:

          Make sure the Built-In Topic IDL files use the -Gdcps IDL
          compiler option.  This was causing compilation problems with
          SunCC 5.6.

Wed Aug 31 06:39:06 2005  Chad Elliott  <elliott_c@ociweb.com>

        * dds/DCPS/BuiltInTopicUtils.h:

          Removed extra semicolon's on the closing curly braces for
          namespaces.

Wed Aug 17 09:10:10 2005  Paul Calabrese  <calabrese_p@ociweb.com>

        * tests/DCPS/DCPSInfoRepo/run_test.pl:
        * tests/DCPS/DcpsIntegration/run_test-integration.pl:
        * tests/DCPS/DcpsIntegration/run_test-topic.pl:

          Enhance these scripts so they properly delete existing ior files
          at the beginning and the end of the test.

Thu Aug 11 13:56:18 2005  Paul Calabrese  <calabrese_p@ociweb.com>

          DDS 0.6 released.

        * DDS_release_notes.txt:
        * VERSION:

          Updates for DDS 0.6.

Thu Aug 11 11:24:15 2005  Paul Calabrese  <calabrese_p@ociweb.com>

        * tests/DCPS/Compiler/idl_test3_main/main.cpp:

          Fix some more function overloading issues with VC6.

Thu Aug 11 11:18:35 2005  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/DCPS/DataSampleHeader.h:
        * dds/DCPS/transport/framework/TransportConfiguration.h:
        * dds/DCPS/transport/framework/TransportDefs.h:
        * dds/DCPS/transport/framework/TransportHeader.h:
        * dds/DCPS/transport/framework/TransportSendStrategy.h:

          Increase the sample and packet lengths to be 32 bit integers
          so we can support larger samples (greater than 64 KB).

        * dds/DCPS/transport/simpleUDP/SimpleUdpConfiguration.inl:

          Limit the simple UDP transport to about 64 KB samples
          because of its lack of fragmentation and the MTU.

Tue Aug  2 16:24:58 2005  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/InfoRepo/DCPSInfoRepo.cpp:
